css/main.css
html {
  background-color: #c9b5ab;
  line-height: 1.5;
}

h1, h2, h3, h4 {
  color: #3f1622;
  font-size: 1.5rem;
  font-family: "PT Sans";
}

main {
  font-family: "PT Serif";
}

h1 + nav {
  font-size: 1.125rem;
  font-family: "PT Sans";
  font-weight: bold;
  color: #8f2440;
  list-style-type: none;
  line-height: 1.5rem;
}

ol {
  list-style-type: none;
}

a {
  text-decoration: none;
  color: #8f2440;
}

img {
  width: 100%;
}

figcaption {
  font-style: italic;
  font-family: "PT Serif";
  text-align: center;
}

p:first-child {
  font-weight: bold;
}

blockquote {
  font-style: italic;
  font-size: 1.5rem;
  font-weight: normal;
}

cite {
  font-size: 1rem;
}

dl {
  list-style-type: none;
}

.nutrition {
  font-style: italic;
}

dt {
  font-weight: bold;
}

data {
  font-weight: normal;
  text-overflow: ellipsis;
}

h2 + ul {
  list-style-type: lower-greek;
}

h4 + ul {
  list-style-type: circle;
}

a:hover {
  color: #3f1622;
  text-decoration: underline;
}

footer a {
  font-weight: normal;
}

p:last-child {
  font-weight: normal;
}

